[project]
name = "fp-len-validation-testing"
version = "0.1.0"
description = "Development on issue 8308 on the Pydantic repo: File path length validation (NewPath)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "pytest>=8.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
pydantic = { workspace = true }
